--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- General -->
     <string name="app_name">Minesweeper</string>
+    <string name="start_time">00:00</string>
 
     <!-- Difficulty Levels -->
     <string name="difficulty_easy">Easy</string>
