Add restart warning dialog
Show dialog if the user is restarting an in-progress game, or just
immediately restart if the game is already won or lost. Otherwise, do
nothing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
     <string name="app_name">Minesweeper</string>
     <string name="start_time">00:00</string>
 
+    <!-- Dialogs -->
+    <string name="restart_dialog_title">Restart game?</string>
+    <string name="restart_dialog_body">You will lose your current progress.</string>
+    <string name="restart_dialog_accept">Restart</string>
+    <string name="restart_dialog_decline">@android:string/cancel</string>
+
     <!-- Difficulty Levels -->
     <string name="difficulty_easy">Easy</string>
     <string name="difficulty_normal">Normal</string>
